--- a/demo/index.html
+++ b/demo/index.html
@@ -2,16 +2,19 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/app.css"/>
+
+
+
 </head>
 <body>
 <h1 class="title">Hey, get your value!</h1>
 <div class="field">
     <label for="name">Name</label>
-    <input type="text" id="name" />
+    <input type="text" id="name"/>
 </div>
 <div class="field">
     <label for="salary">Salary</label>
-    <input type="number" id="salary" />
+    <input type="number" id="salary"/>
 </div>
 <div class="field">
     <label for="month">Month</label>
@@ -19,23 +22,25 @@
 </div>
 <div class="field">
     <label for="vacation">Vacation</label>
-    <input type="checkbox" id="vacation" />
+    <input type="checkbox" id="vacation"/>
 </div>
 <div class="field">
-    <button class="btn" onclick="done()">Done</button>
+    <button class="btn" onclick="done();">Done</button>
 </div>
 </div>
 <div class="field2">
     <label for="bonus">Bonus $</label>
-    <input type="number" id="bonus" />
+    <input type="number" id="bonus"/>
 </div>
 <div class="field3">
     <label for="total">Annual total $</label>
-    <input type="number" id="total" />
+    <input type="number" id="total"/>
 </div>
 
 
-<script src="js/app.js"/>
+<script src="js/operations.js"></script>
+<script src="js/validations.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
