1-cat is the css

--- a/hannah/public/1-cat.html
+++ b/hannah/public/1-cat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>1- creating the cat</title>
-    <link rel="stylesheet" href="2-add-tail.css"/>
+    <link rel="stylesheet" href="1-cat.css"/>
 </head>
 <body>
 <div class="cat">
