--- a/hannah/public/1-cat.html
+++ b/hannah/public/1-cat.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>1- creating the cat</title>
-    <link rel="stylesheet" href="2-add-tail.css"/>
+    <link rel="stylesheet" href=1-cat.css"/>
 </head>
 <body>
 <div class="cat">
-    <div class="cat__head">
-        <div class="cat__eyes cat__eyes--align">
-            ^^
+    <div class="cat__tail">
+        <div class="cat__tail__draw">z</div>
+        <div class="cat__head">
+            <div class="cat__eyes cat__eyes--align">
+                ^^
+            </div>
+            <div class="cat__mouth cat__mouth--align">
+                .
+            </div>
         </div>
-        <div class="cat__mouth cat__mouth--align">
-            .
-        </div>
-    </div>
-    <div class="cat__legs">
-        <div class="cat__leg cat__leg--left">
-        </div>
-        <div class="cat__leg cat__leg--right">
+        <div class="cat__legs">
+            <div class="cat__leg cat__leg--left">
+            </div>
+            <div class="cat__leg cat__leg--right">
+            </div>
         </div>
     </div>
 </div>
